--- a/files/ml/logistic_regression_titanic.ipynb
+++ b/files/ml/logistic_regression_titanic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 466,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "890    male  32.0      0      0      370376   7.75   NaN        Q  "
       ]
      },
-     "execution_count": 467,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "4            5         0       3    0  35.0      0      0   8.0500         2"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "890          891         0       3    0   32      0      0   7.75         1"
       ]
      },
-     "execution_count": 475,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "890          891         0       3    0   32      0      0   7.75         1"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
        "4          896       3    1   22      1      1  12.2875         2"
       ]
      },
-     "execution_count": 478,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -999,7 +999,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 479,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1061,15 +1061,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.84      0.84       147\n",
-      "           1       0.69      0.71      0.70        76\n",
+      "           0       0.82      0.88      0.85       144\n",
+      "           1       0.75      0.66      0.70        79\n",
       "\n",
-      "    accuracy                           0.79       223\n",
-      "   macro avg       0.77      0.77      0.77       223\n",
-      "weighted avg       0.80      0.79      0.79       223\n",
+      "    accuracy                           0.80       223\n",
+      "   macro avg       0.79      0.77      0.78       223\n",
+      "weighted avg       0.80      0.80      0.80       223\n",
       "\n",
-      "[[123  24]\n",
-      " [ 22  54]]\n"
+      "[[127  17]\n",
+      " [ 27  52]]\n"
      ]
     }
    ],
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
     "\n",
     "  df = pd.DataFrame(list(zip(test['PassengerId'], pred)))\n",
     "  df.columns = ['PassengerId', 'Survived']\n",
-    "  df.to_csv(path_or_buf='titanic_pred.csv', index=False)\n",
+    "  df.to_csv(path_or_buf='data/titanic_pred.csv', index=False)\n",
     "\n",
     "for_kaggle_submission()"
    ]
