--- a/machine-learning/final_loans.ipynb
+++ b/machine-learning/final_loans.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Loan prediction\n",
     "\n",
-    "Data is adapted from https://www.kaggle.com/wordsforthewise/lending-club. This project uses a DNN but focuses heavily on cleaning the data. To provide some context, the input of this project is historical data on loans given out, in particular including information on whether the borrower defaulted. Our goal is to predict whether a given borrower will pay back their loan."
+    "Data is adapted from https://www.kaggle.com/wordsforthewise/lending-club. This project uses a DNN but focuses heavily on cleaning the data. To provide some context, the input of this project is historical data on loans given out, in particular including information on whether the borrower defaulted. Our goal is to predict whether a given borrower will pay back their loan. Ultimately, we achieve **89% accuracy**."
    ]
   },
   {
